; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_dsa_no_digest_size_test.c_setup_tests.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_dsa_no_digest_size_test.c_setup_tests.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dsa_exact_size_test = common dso_local global i32 0, align 4
@dsa_small_digest_test = common dso_local global i32 0, align 4
@dsa_large_digest_test = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @setup_tests() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @genkeys()
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %12

5:                                                ; preds = %0
  %6 = load i32, i32* @dsa_exact_size_test, align 4
  %7 = call i32 @ADD_TEST(i32 %6)
  %8 = load i32, i32* @dsa_small_digest_test, align 4
  %9 = call i32 @ADD_TEST(i32 %8)
  %10 = load i32, i32* @dsa_large_digest_test, align 4
  %11 = call i32 @ADD_TEST(i32 %10)
  store i32 1, i32* %1, align 4
  br label %12

12:                                               ; preds = %5, %4
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @genkeys(...) #1

declare dso_local i32 @ADD_TEST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
